# crud-app

./: Exam.hs  crudapp.cabal  flake.nix  justfile  result
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/package-registration--12850/: pkgConf
dist-newstyle/tmp/package-registration--12851/: pkgConf
dist-newstyle/tmp/src-12856/exceptions-0.10.7/: .ghci  .gitignore  AUTHORS.markdown  CHANGELOG.markdown  LICENSE  README.markdown
dist-newstyle/tmp/src-12856/exceptions-0.10.7/src/Control/Monad/: Catch.hs
dist-newstyle/tmp/src-12856/exceptions-0.10.7/src/Control/Monad/Catch/: Pure.hs
dist-newstyle/tmp/src-12856/exceptions-0.10.7/tests/: Tests.hs
dist-newstyle/tmp/src-12856/exceptions-0.10.7/tests/Control/Monad/Catch/: Tests.hs
src/: Lib.hs  Main.hs  Models.hs
