cabal-version:   3.0
name:            crudapp
version:         0.1.0.0
license:         NONE
author:          Shreyash
maintainer:      shreyash.pankaj@juspay.in
build-type:      Simple

common warnings
    ghc-options: -Wall

executable testapp
    import:           warnings
    main-is:          Main.hs
    build-depends:    aeson, base >=4.7 && <5, bytestring, containers, cookie, directory, monad-logger, mtl >=2.2.2 && <2.3, persistent, persistent-postgresql, persistent-sqlite, persistent-template, resourcet, servant, servant-server, text, utf8-string, wai, warp, uuid
    hs-source-dirs:   src
    default-language: Haskell2010